Add Python cache files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -224,3 +224,8 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/git,macos,python
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
