--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 # 로컬 개발용 Docker Compose 설정
 services:
   janus:
-    image: canyan/janus-gateway:latest
+    image: canyan/janus-gateway:1.3.2
     # 로컬 개발용: bridge 네트워크 + 포트 매핑
     ports:
       - "8188:8188"
